# ZQLFFmpeg

./: settings.gradle
Medialib/: CMakeLists.txt  build.gradle
Medialib/src/androidTest/java/com/zql/medialib/: ExampleInstrumentedTest.java
Medialib/src/main/: AndroidManifest.xml
Medialib/src/main/cpp/media/: ZQLMedia.cpp
Medialib/src/test/java/com/zql/medialib/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/zql/zqlffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zql/zqlffmpeg/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zql/zqlffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
